Update Hydrus Update Winget Package.yml

--- a/.github/workflows/Hydrus Update Winget Package.yml
+++ b/.github/workflows/Hydrus Update Winget Package.yml
@@ -13,4 +13,4 @@ jobs:
         komac-token: ${{ secrets.KOMAC_TOKEN }}
         identifier: "HydrusNetwork.HydrusNetwork"
         repo: "hydrusnetwork/hydrus"
-        URL: "https://github.com/hydrusnetwork/hydrus/releases/download/v607a/Hydrus.Network.607a.-.Windows.-.Installer.exe"
+        URL: "https://github.com/hydrusnetwork/hydrus/releases/download/v607a/Hydrus.Network.{VERSION}.-.Windows.-.Installer.exe"
